<resources>
    <string name="app_name">SmartPickDriver</string>
    <string name="driver_app">Driver App</string>
    <string name="smartpickup">smartpickUP</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_as_account">Already Have As Account</string>
    <string name="otp_code">Otp Code</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="edit_number">Edit Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="driver_name">Driver Name</string>
    <string name="home">Home</string>
    <string name="about_me">+91 9654555555</string>
    <string name="my_booking">My Bookings</string>
    <string name="create_as_account">Create An Account</string>
    <string name="notifications">Notifications</string>
    <string name="ride_history">Ride History</string>
    <string name="payment_history">Payment History</string>
    <string name="settings">Settings</string>
    <string name="not_record_available">Notifications Not Record Available</string>
    <string name="not_record_available_booking">Booking Accept Not Record Available</string>
    <string name="logout">Logout</string>
    <string name="Gps_done">Location Not Enable ?</string>
    <string name="txt_multiple">Multiple</string>
    <string name="change_user_profile_photos">Change User profile Photos</string>
    <string name="txt_enter_drop">Enter drop location</string>
    <string name="txt_drop_loc">Drop at</string>
    <string name="txt_pickup_loc">Pickup from</string>
    <string name="txt_drop_locations">Select Drops</string>
    <string name="txt_enter_pickup">Enter pickup location</string>
    <string name="_27_march_2020">27 march 2020</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="view_details">View Details</string>
    <string name="_10_minute_ago">10 minute ago</string>
    <string name="username">UserName</string>
    <string name="drop_location">Drop Location</string>
    <string name="refresh">Refresh</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="john_doe">John Doe</string>
    <string name="request_time">Request Time</string>
    <string name="truck_book">Truck Book</string>
    <string name="stuff_information">Stuff Information</string>
    <string name="pikup_time">Pikup Time</string>
    <string name="_3_00_pm">3.00 Pm</string>
    <string name="pickup_exit">PickUp Exit</string>
    <string name="_28_03_2020">28-03-2020</string>
    <string name="attach_photos">Attach Photos</string>
    <string name="stuff_name">Stuff Name</string>
    <string name="lorem_ispum_dollor">Lorem ispum Dollor</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="live_track">Live Track</string>
    <string name="user_name">User Name</string>
    <string name="_91_741_000_3363">(+91)-741 000 3363</string>
    <string name="price">Price </string>
    <string name="_223">$223</string>
    <string name="_45_minus">45 minus</string>
    <string name="time">Time :</string>
    <string name="distance">Distance</string>
    <string name="_3_5_k_m">3.5 k.m.</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="end_ride">End Ride</string>
    <string name="pickup_point_full_address">Pickup Point (Full Address)</string>
    <string name="drop_location_full_address">Drop Location(Full Address)</string>
    <string name="history_details">History Details</string>
    <string name="id_number_abc123">Id Number : #ABC123</string>
    <string name="date_02_feb_2020">Date : 02 Feb 2020</string>
    <string name="selected_truck">Selected Truck</string>
    <string name="stuff_details">Stuff Details</string>
    <string name="attachment">Attachment</string>
    <string name="payment_received">Payment Received</string>
    <string name="successfully">Successfully</string>
    <string name="credit_card">Credit Card</string>
    <string name="view_payment_details">View Payment Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="money_received">Money Received</string>
    <string name="_02_feb_2020_1_30_pm">02 Feb 2020, 1.30 pm</string>
    <string name="from">From</string>
    <string name="card_name">Card Name</string>
    <string name="_7869696032560">7869696032560</string>
    <string name="bank_name">Bank Name</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="k4895621atgkm752">k4895621ATGKM752</string>
    <string name="view_booking_details">View Booking Details</string>
    <string name="appreance">Appreance</string>
    <string name="night_mode">Night Mode</string>
    <string name="sound">Sound</string>
    <string name="privacy">Privacy</string>
    <string name="change_your_password">Change your Password</string>
    <string name="lorem_ipsum_is_a_placeholder_text_csutom_view_back_id">Lorem ipsum is a placeholder text csutom view back id</string>
    <string name="_00_30">00:30</string>
    <string name="delete_account">Delete Account</string>
    <string name="saturday">Saturday</string>
    <string name="change_user_profile_photo">Change User Profile Photo</string>
    <string name="name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_exit"><![CDATA[Save & Exit]]></string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="dob">Dob</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="notification_channel_id">my_channel_01</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="already_reject">Already Accepted</string>
    <string name="gps_is_disable_in_your_device_would_you_like_to_enable_it">Gps is disable in your device, Would you like to enable it ?</string>
    <string name="txt_ok">OK</string>
    <string name="verification_code">Verification code</string>
    <string name="user_number">User Number</string>
    <string name="booking_accept">Booking Accept</string>
    <string name="booking_done">Booking Done</string>
    <string name="stuff_description">stuff Description</string>
    <string name="txt_packing_mat">Packaging Required ?</string>
    <string name="helper">Helper Need</string>
    <string name="_2">2</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="driver_number">Driver number</string>
    <string name="not_arrive">Not Arrive</string>
    <string name="language">Language</string>
    <string name="exit">Are you sure you want to exit the activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="required">Required</string>
    <string name="invalid_mobile_number">Invalid Mobile No.</string>
    <string name="invalid_user_name">Invalid User Name</string>
    <string name="wrong_otp">Wrong Otp</string>
    <string name="invalid_email">Invalid email</string>
    <string name="select_gender">Select gender</string>
    <string name="dob_required">Dob Required</string>
    <string name="Please_select_valid_pick_location">Please select valid pick location !</string>
    <string name="Please_select_valid_drop_location">Please select valid drop location !</string>
    <string name="Please_select_goods_type">Please select goods type !</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="pickup">Pickup</string>
    <string name="truck">Truck</string>
    <string name="reciver_name">Receiver Name</string>
    <string name="reciver_nubmer">Receiver Number</string>
    <string name="arrive">Arrive</string>
    <string name="english">English</string>
    <string name="arabic">Ethiopian</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="enter_otp_number">Enter Otp Number.</string>
    <string name="send">Send</string>
</resources>
